Avoid 'jump' when nesting a list item

--- a/packages/block-library/src/list/editor.scss
+++ b/packages/block-library/src/list/editor.scss
@@ -3,4 +3,7 @@
 .block-library-list .editor-rich-text__tinymce ol {
 	padding-left: 1.3em;
 	margin-left: 1.3em;
+	li {
+		margin-bottom: 0;
+	}
 }
